[package]
name = "oreiller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
toml = "0.5.9"
serde-xml-rs = "0.5.1"
log = { version = "^0.4.14", features = ["std"] }

[dependencies.simple_logger]
version = "2.2.0"
default-features = false
features = ["colors"]
